modified footer class in experienc.css

--- a/index.html
+++ b/index.html
@@ -26,15 +26,17 @@
       <div class="card">
         <h2>Background</h2>
         <p>I am a network engineer who is seeking new challenges in the web design field  </p>
-        <p>To read more see my <a href="experience/experience.html">experience</a> page</p>  
+        <p>To read more see my <a href="experience/experience.html" >experience </a> page</p>  
         
       
       </div> 
 
       <div class="card">
         <h2>Goals</h2>
-        <p>I want to be prolific in the art of web design including programming language such as JavaScript</p>
-        <p>I would love to apply the skills I learn in this course to my current career</p>
+        <p>I want to learn and improve my HTML, CSS and JavaScript skills in a way that will allow me to land a job
+          as a web disigner.</p>
+        <p>Also, I would love to apply the skills I learn in this 
+          course to my current career</p>
         <ul class="skills">
           <li>HTML</li>
           <li>CSS</li>
