--- a/experience/experience.html
+++ b/experience/experience.html
@@ -11,7 +11,6 @@
         <div class="main-nav"> <!--main nav-->
             <ul class="nav">
                 <li class="home"><a href="../index.html">Home</a></li>
-                <li><a href="#">Cables</a></li>
             </ul>
         </div>
         <header> <!--header-->
@@ -36,7 +35,7 @@
     </div>
     <footer>
         <ul>
-            <li><a href="#" class="github">Github</a></li>
+            <li><a href="#" class="social github">Github</a></li>
         </ul>
     </footer>
 </body>
