Reduced background image and added github link to html

--- a/experience.html
+++ b/experience.html
@@ -35,7 +35,7 @@
     </div>
     <footer>
         <ul>
-            <li><a href="#" class="social github">Github</a></li>
+            <li><a href="https://github.com/burgosjorjorge/Project1.git" class="social github">Github</a></li>
         </ul>
     </footer>
 </body>
