--- a/experience.html
+++ b/experience.html
@@ -10,7 +10,7 @@
     <div>
         <div class="main-nav"> <!--main nav-->
             <ul class="nav">
-                <li class="home"><a href="../index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
             </ul>
         </div>
         <header> <!--header-->
