--- a/experience.html
+++ b/experience.html
@@ -8,27 +8,27 @@
 </head>
 <body>
     <div>
-        <div class="main-nav"> <!--main nav-->
+        <section class="nav"> <!--main nav-->
             <ul class="nav">
                 <li><a href="../index.html">Home</a></li>
             </ul>
-        </div>
+        </section>
         <header> <!--header-->
             <h1 class="tag name">Work Experience</h1>
         </header>
         <main class="division"><!--main attribute-->
-            <div class="card"> <!--phone system div-->
+            <section class="card"> <!--phone system div-->
                 <h2>Phone System</h2>
                 <img src="../images/ipAndKeyPhone.jpg" alt="ip and key system phone">
                 <p>My experience ranges from key system phone to IP phone</p>
-            </div>
+            </section>
 
-            <div class="card"><!--data switches div-->
+            <section class="card"><!--data switches div-->
                 <h2>Data Switches</h2>
                 <img src="../images/dataSwitch.jpg" alt="data switches image">
                 <p>Also, I have worked with data switches and routers with speed range from 100Mgb to
                     10Ggb</p>
-            </div>
+            </section>
         </main>                
             
             
