Added property in hobbies.css

--- a/hobbies.html
+++ b/hobbies.html
@@ -3,42 +3,43 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="hobbies.css">
         <title>Hobbies</title>
     </head>
     <body>
         <div>
             <div>
-                <ul>
+                <ul class="nav">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="experience.html">Experience</a></li>
                 </ul>
             </div>
             <header>
-                <h1>My Hobbies</h1>
-                <p>My hobbies are working in the yard, grill cooking for the family , and formula 1</p>
+                <h1 class="tag name">My Hobbies</h1>
+                <p class="tag detail">My hobbies are working in the yard, grill cooking for the family , and formula 1</p>
             </header>
         </div>
         <main>
-            <section>
-                <h2>Yard Work</h2>
-                <img src="images/homeimage.jpg" alt="image of my John Deer tractor">
+            <section class="card">
+                <h2 class="tag ">Yard Work</h2>
+                <img src="images/homeimage.jpg" alt="image of my John Deer tractor" class="image">
                 <p>I enjoy working in the yard and keeping the yard beautiful and green</p>
                 <p>Mowing the grass with a tractor helps me finish the work quicker and does a great job</p>
                 <p>The weather in Florida is hot 90% of the year so the landscape is always green</p>
             </section> 
             
-            <section>
-                <h2>Grill Cooking</h2>
-                <img src="images/tenderLoin.jpeg" alt="image of a Tender Loin Meat">
+            <section class="card">
+                <h2 class="tag">Grill Cooking</h2>
+                <img src="images/tenderLoin.jpeg" alt="image of a Tender Loin Meat" class="image">
                 <p>I enjoy cooking in the grill at least three times a week</p>
                 <p>My favorite meat to cook is Tender Loin</p>
             </section>
 
-            <section>
-                <h2>Formula 1</h2>
-                <img src="images/rsz_formula1car.jpg" alt="Mercedes Benz formula 1 car">
+            <section class="card">
+                <h2 class="tag">Formula 1</h2>
+                <img src="images/rsz_formula1car.jpg" alt="Mercedes Benz formula 1 car" class="image">
                 <p>My favorite sport is formula 1. Its fast, sophisticated, and exciting</p>
-                <p>There is nothing better than grilling a barbeque while watching a sporting even like Formula 1</p>
+                <p>There is nothing better than grilling a barbeque while watching a sporting event like Formula 1</p>
             </section>
         </main>
 
