--- a/experience.html
+++ b/experience.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <div>
-        <section class="nav"> <!--main nav-->
+        <section > <!--main nav-->
             <ul class="nav">
                 <li><a href="../index.html">Home</a></li>
+                <li><a href="hobbies.html">Hobbies</a></li>
             </ul>
         </section>
         <header> <!--header-->
