changed div for header in main nav

--- a/experience.html
+++ b/experience.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <div>
-        <section > <!--main nav-->
+        <div > <!--main nav-->
             <ul class="nav">
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="hobbies.html">Hobbies</a></li>
             </ul>
-        </section>
+        </div>
         <header> <!--header-->
             <h1 class="tag name">Work Experience</h1>
         </header>
