--- a/hobbies.html
+++ b/hobbies.html
@@ -22,7 +22,7 @@
         <main>
             <section class="card">
                 <h2 class="tag ">Yard Work</h2>
-                <img src="images/homeimage.jpg" alt="image of my John Deer tractor" class="image">
+                <img src="images/homeimage.jpg" alt="John Deer tractor" class="image">
                 <p>I enjoy working in the yard and keeping the yard beautiful and green</p>
                 <p>Mowing the grass with a tractor helps me finish the work quicker and does a great job</p>
                 <p>The weather in Florida is hot 90% of the year so the landscape is always green</p>
@@ -30,16 +30,16 @@
             
             <section class="card">
                 <h2 class="tag">Grill Cooking</h2>
-                <img src="images/tenderLoin.jpeg" alt="image of a Tender Loin Meat" class="image">
+                <img src="images/tenderLoin.jpeg" alt="Tender Loin Meat" class="image">
                 <p>I enjoy cooking in the grill at least three times a week</p>
                 <p>My favorite meat to cook is Tender Loin</p>
             </section>
 
             <section class="card">
                 <h2 class="tag">Formula 1</h2>
-                <img src="images/rsz_formula1car.jpg" alt="Mercedes Benz formula 1 car" class="image">
+                <img src="images/rsz_formula1car.jpg" alt="Formula 1 car" class="image">
                 <p>My favorite sport is formula 1. Its fast, sophisticated, and exciting</p>
-                <p>There is nothing better than grilling a barbeque while watching a sporting event like Formula 1</p>
+                <p>There is nothing better than grilling a barbecue while watching a sporting event like Formula 1</p>
             </section>
         </main>
 
