added border radius to experience image

--- a/experience.html
+++ b/experience.html
@@ -20,13 +20,13 @@
         <main class="division"><!--main attribute-->
             <section class="card"> <!--phone system div-->
                 <h2>Phone System</h2>
-                <img src="../images/ipAndKeyPhone.jpg" alt="ip and key system phone">
+                <img src="images/ipAndKeyPhone.jpg" alt="ip and key system phone" class="image">
                 <p>My experience ranges from key system phone to IP phone</p>
             </section>
 
             <section class="card"><!--data switches div-->
                 <h2>Data Switches</h2>
-                <img src="../images/dataSwitch.jpg" alt="data switches image">
+                <img src="images/dataSwitch.jpg" alt="data switches image" class="image">
                 <p>Also, I have worked with data switches and routers with speed range from 100Mgb to
                     10Ggb</p>
             </section>
