--- a/experience.html
+++ b/experience.html
@@ -10,7 +10,7 @@
     <div>
         <div > <!--main nav-->
             <ul class="nav">
-                <li><a href="../index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="hobbies.html">Hobbies</a></li>
             </ul>
         </div>
