change <div> into <nav> in all 3 html files

--- a/hobbies.html
+++ b/hobbies.html
@@ -8,12 +8,12 @@
     </head>
     <body>
         <div>
-            <div>
+            <nav>
                 <ul class="nav">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="experience.html">Experience</a></li>
                 </ul>
-            </div>
+            </nav>
             <header>
                 <h1 class="tag name">My Hobbies</h1>
                 <p class="tag detail">My hobbies are working in the yard, grill cooking for the family , and formula 1</p>
