--- a/experience.html
+++ b/experience.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <div>
-        <div > <!--main nav-->
+        <nav > <!--main nav-->
             <ul class="nav">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="hobbies.html">Hobbies</a></li>
             </ul>
-        </div>
+        </nav>
         <header> <!--header-->
             <h1 class="tag name">Work Experience</h1>
         </header>
