--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   <body>
     <div>
 
-      <div class="main-nav">
+      <nav class="main-nav">
           <ul class="nav">
             <li class="name">Jorge Burgos</li>
             <li><a href="index.html">Home</a></li>
             <li><a href="experience.html">Experience</a></li>
             <li><a href="hobbies.html">Hobbies</a></li>
           </ul>
-        </div>
-
+      </nav>
+       
       <header>
         <img src="images/rsz_homeimage.png" alt="Home Picture" class="profile-image">
         <h1 class="tag name">Hello, I'm Jorge.</h1>
